[package]
name = "uniflow"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: tokio as optional dependency via feature
reactive_graph = { version = "0.2.12", features = ["effects"] }
any_spawner = { version = "0.3", features = ["tokio"] }
futures = "0.3"
tokio = { version = "1.49.0", features = ["sync", "rt"] }
