[package]
name = "uniflow"
description = "A unidirectional data flow state management library"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = [
    "Ben Leadbetter <ben_leadbetter@hotmail.com>",
]
repository = "https://github.com/BenLeadbetter/uniflow.git"

[dependencies]
reactive_graph = { version = "0.2.12", features = ["effects"] }
any_spawner = { version = "0.3", features = ["tokio"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
